--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Kisaragi Hiu" />
     <meta name="keywords" content="AQI, Taiwan" />
-    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link rel="stylesheet" href="./styles.css" type="text/css" />
   </head>
   <body>
     <div class="flex">
@@ -24,7 +24,7 @@
     </div>
     <table id="other-meta"></table>
     <div id="updated-block">更新時間：<time id="updated" title=""></time></div>
-    <script type="text/javascript" src="init.js"></script>
+    <script type="text/javascript" src="./init.js"></script>
     <footer>
       資料來自<a href="https://data.gov.tw/">政府資料開放平臺</a>。
     </footer>
