--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         <span>/</span>
         <span id="station">holder</span>
       </div>
-      <div id="aqi">0</div>
+      <h1 id="aqi">0</h1>
     </div>
-    <table id="other-meta"></table>
+    <div class="flex">
+      <h2>其他欄位</h2>
+      <table id="other-meta"></table>
+    </div>
     <div id="updated-block">更新時間：<time id="updated" title=""></time></div>
     <script type="text/javascript" src="./init.js"></script>
     <footer>
