Add a refresh button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <meta name="author" content="Kisaragi Hiu" />
     <meta name="keywords" content="AQI, Taiwan" />
     <link rel="stylesheet" href="./styles.css" type="text/css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule=""
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
+    ></script>
   </head>
   <body>
     <div class="flex">
@@ -19,6 +27,9 @@
         <span id="county">place</span>
         <span>/</span>
         <span id="station">holder</span>
+        <a id="refresh" href="."
+          ><ion-icon name="refresh-outline"></ion-icon
+        ></a>
       </div>
       <h1 id="aqi">0</h1>
     </div>
