--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" type="text/css" />
+    <link rel="stylesheet" href="/main.scss" type="text/css" />
     <!-- Fathom Analytics -->
     <script>
       let dnt = navigator.doNotTrack || navigator.msDoNotTrack || null;
@@ -92,10 +92,6 @@
         <tbody></tbody>
       </table>
     </div>
-    <script src="bundle.js"></script>
-    <script src="feather-icons/feather.min.js"></script>
-    <script>
-      feather.replace();
-    </script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
