--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/main.scss" type="text/css" />
+    <link rel="stylesheet" href="/src/main.scss" type="text/css" />
     <!-- Fathom Analytics -->
     <script>
       let dnt = navigator.doNotTrack || navigator.msDoNotTrack || null;
@@ -92,6 +92,6 @@
         <tbody></tbody>
       </table>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
