Add link to view station location on a map
Closes #1.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
       <span id="county">place</span>
       <span>/</span>
       <span id="station">holder</span>
+      <a
+        target="_blank"
+        rel="noreferrer"
+        title="在 Google 地圖上查看測站位置"
+        id="latlong"
+        >12.34,56.78</a
+      >
     </h2>
     <span title="AQI" id="aqi">0</span>
     <h2 id="other-title">其他監測資料</h2>
